--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "displayName": "Better PHP Error Logger",
     "description": "A PHP error logger with customization options",
     "icon": "images/better-php-error-logger.png",
-    "version": "0.1.34",
+    "version": "0.1.38",
     "publisher": "martinvz",
     "engines": {
         "vscode": "^1.66.0"
@@ -64,10 +64,6 @@
                 "title": "Var dump or var export variable"
             },
             {
-                "command": "extension.betterPhpErrorLogger.varDumpExportVariableAlternative",
-                "title": "Var dump or var export variable alternative"
-            },
-            {
                 "command": "extension.betterPhpErrorLogger.useEchoInstead",
                 "title": "Use echo instead"
             },
@@ -80,18 +76,6 @@
                 "title": "Get current output buffer"
             },
             {
-                "command": "extension.betterPhpErrorLogger.printCurrentOutputBufferWithCallStack",
-                "title": "Get current output buffer with call stack"
-            },
-            {
-                "command": "extension.betterPhpErrorLogger.printCurrentOutputBufferVarDumpExport",
-                "title": "Get current output buffer, var dump or var export"
-            },
-            {
-                "command": "extension.betterPhpErrorLogger.printCurrentOutputBufferVarDumpExportAlternative",
-                "title": "Get current output buffer, var dump or var export alternative"
-            },
-            {
                 "command": "extension.betterPhpErrorLogger.printCurrentOutputBufferUseEcho",
                 "title": "Get current output buffer, use echo"
             },
@@ -100,8 +84,12 @@
                 "title": "Quick pick"
             },
             {
-                "command": "extension.betterPhpErrorLogger.logMultipleAsArray",
+                "command": "extension.betterPhpErrorLogger.logMultiple",
                 "title": "Log multiple as array"
+            },
+            {
+                "command": "extension.betterPhpErrorLogger.newLinesForEcho",
+                "title": "New lines for echo"
             }
         ],
         "keybindings": [
@@ -127,13 +115,6 @@
                 "args": "varDumpExportVariable"
             },
             {
-                "command": "extension.betterPhpErrorLogger.varDumpExportVariableAlternative",
-                "key": "ctrl+alt+w",
-                "when": "editorLangId=='php' && editorTextFocus && !editorReadonly",
-                "mac": "ctrl+alt+w",
-                "args": "varDumpExportVariableAlternative"
-            },
-            {
                 "command": "extension.betterPhpErrorLogger.useEchoInstead",
                 "key": "ctrl+alt+e",
                 "when": "editorLangId=='php' && editorTextFocus && !editorReadonly",
@@ -148,37 +129,16 @@
             },
             {
                 "command": "extension.betterPhpErrorLogger.printCurrentOutputBuffer",
-                "key": "ctrl+alt+o d",
+                "key": "ctrl+alt+o",
                 "when": "editorLangId=='php' && editorTextFocus && !editorReadonly",
-                "mac": "ctrl+alt+o d",
+                "mac": "ctrl+alt+o",
                 "args": "printCurrentOutputBuffer"
             },
             {
-                "command": "extension.betterPhpErrorLogger.printCurrentOutputBufferWithCallStack",
-                "key": "ctrl+alt+o c",
-                "when": "editorLangId=='php' && editorTextFocus && !editorReadonly",
-                "mac": "ctrl+alt+o c",
-                "args": "printCurrentOutputBufferWithCallStack"
-            },
-            {
-                "command": "extension.betterPhpErrorLogger.printCurrentOutputBufferVarDumpExport",
-                "key": "ctrl+alt+o v",
-                "when": "editorLangId=='php' && editorTextFocus && !editorReadonly",
-                "mac": "ctrl+alt+o v",
-                "args": "printCurrentOutputBufferVarDumpExport"
-            },
-            {
-                "command": "extension.betterPhpErrorLogger.printCurrentOutputBufferVarDumpExportAlternative",
-                "key": "ctrl+alt+o w",
-                "when": "editorLangId=='php' && editorTextFocus && !editorReadonly",
-                "mac": "ctrl+alt+o w",
-                "args": "printCurrentOutputBufferVarDumpExportAlternative"
-            },
-            {
                 "command": "extension.betterPhpErrorLogger.printCurrentOutputBufferUseEcho",
-                "key": "ctrl+alt+o e",
+                "key": "ctrl+alt+p",
                 "when": "editorLangId=='php' && editorTextFocus && !editorReadonly",
-                "mac": "ctrl+alt+o e",
+                "mac": "ctrl+alt+p",
                 "args": "printCurrentOutputBufferUseEcho"
             },
             {
@@ -188,10 +148,16 @@
                 "mac": "ctrl+alt+q"
             },
             {
-                "command": "extension.betterPhpErrorLogger.logMultipleAsArray",
+                "command": "extension.betterPhpErrorLogger.logMultiple",
                 "key": "ctrl+alt+a",
                 "when": "editorLangId=='php' && editorTextFocus && !editorReadonly",
                 "mac": "ctrl+alt+a"
+            },
+            {
+                "command": "extension.betterPhpErrorLogger.newLinesForEcho",
+                "key": "ctrl+alt+w",
+                "when": "editorLangId=='php' && editorTextFocus && !editorReadonly",
+                "mac": "ctrl+alt+w"
             }
         ],
         "configuration": {
@@ -209,80 +175,6 @@
                         "'in ' . __FILE__ . ' on line ' . __LINE__"
                     ],
                     "description": "Write an array, with objects with the property errorLog, where each objects errorlog value will be error logged. Use ${selectedVar} for the selected variable. And ${selectedVarString} for the variable string (Read readme)"
-                },
-                "betterPhpErrorLogger.printWithCallStack": {
-                    "type": "object",
-                    "title": "Print with call stack",
-                    "properties": {
-                        "printWithCallStack": {
-                            "type": "boolean",
-                            "default": false,
-                            "description": "Set this to true to also print call stack"
-                        },
-                        "printCallStackAsArray": {
-                            "type": "boolean",
-                            "default": false,
-                            "description": "Set this to true to print call stack as array"
-                        }
-                    },
-                    "default": {
-                        "printWithCallStack": false,
-                        "printCallStackAsArray": false
-                    },
-                    "description": "Set this to true to also print call stack and set printCallStackAsArray to true to print call stack as array",
-                    "additionalProperties": false
-                },
-                "betterPhpErrorLogger.varDumpExportVariable": {
-                    "type": "object",
-                    "title": "Var dump or export variable",
-                    "properties": {
-                        "varDumpExportVariable": {
-                            "type": "boolean",
-                            "default": false,
-                            "description": "Set this to true to var_dump or var_export the selected variable"
-                        },
-                        "dumpOrExport": {
-                            "enum": [
-                                "var_dump",
-                                "var_export"
-                            ],
-                            "type": "string",
-                            "default": "var_export",
-                            "description": "Set this to var_dump or var_export"
-                        }
-                    },
-                    "description": "Set this to true to var_dump or export the selected variable",
-                    "default": {
-                        "varDumpExportVariable": false,
-                        "dumpOrExport": "var_export"
-                    },
-                    "additionalProperties": false
-                },
-                "betterPhpErrorLogger.useEchoInstead": {
-                    "type": "object",
-                    "title": "Use echo instead",
-                    "properties": {
-                        "useEchoInstead": {
-                            "type": "boolean",
-                            "default": false,
-                            "description": "Set this to true to use echo instead of error_log"
-                        },
-                        "preOrBr": {
-                            "enum": [
-                                "pre",
-                                "br"
-                            ],
-                            "type": "string",
-                            "default": "pre",
-                            "description": "Set this to pre or br"
-                        }
-                    },
-                    "description": "Set this to true to use echo instead of error_log, choose pre or br",
-                    "default": {
-                        "useEchoInstead": false,
-                        "preOrBr": "pre"
-                    },
-                    "additionalProperties": false
                 },
                 "betterPhpErrorLogger.defaultVariable": {
                     "type": "object",
@@ -305,12 +197,6 @@
                     },
                     "description": "Set name and value of the default selectedVarString, when no variable is selected",
                     "additionalProperties": false
-                },
-                "betterPhpErrorLogger.usePHPParserForPositioning": {
-                    "type": "boolean",
-                    "title": "Use PHP Parser for positioning",
-                    "default": true,
-                    "description": "Set this to false to not use the vscode-php-parser for positioning. PHP Parser requires valid code. When false, error_logs will always be placed on the next line."
                 },
                 "betterPhpErrorLogger.laravelLog": {
                     "type": "object",
@@ -356,11 +242,60 @@
                     "description": "Set useLaravelLog to true to use the laravel log function instead of error_log and set laravelLogLevel to the log level you want to use",
                     "additionalProperties": false
                 },
-                "betterPhpErrorLogger.logOnlyFirstSelection": {
+                "betterPhpErrorLogger.usePHPParserForPositioning": {
                     "type": "boolean",
-                    "title": "Log only first selection",
-                    "default": false,
-                    "description": "Set this to true to only log the first selection"
+                    "title": "Use PHP Parser for positioning",
+                    "default": true,
+                    "description": "Set this to false to not use the vscode-php-parser for positioning. PHP Parser requires valid code. When false, error_logs will always be placed on the next line."
+                },
+                "betterPhpErrorLogger.printWithCallStack": {
+                    "scope": "application",
+                    "type": "string",
+                    "title": "Print with call stack",
+                    "default": "No call stack",
+                    "enum": [
+                        "No call stack",
+                        "With call stack as string",
+                        "With call stack as array"
+                    ],
+                    "description": "Set this to No call stack, With call stack as string or With call stack as array"
+                },
+                "betterPhpErrorLogger.varDumpExportVariable": {
+                    "scope": "application",
+                    "type": "string",
+                    "title": "Var dump or export variable",
+                    "default": "No var dump or export",
+                    "enum": [
+                        "No var dump or export",
+                        "var_dump",
+                        "var_export"
+                    ],
+                    "description": "Set this to No var dump or export, var_dump or var_export"
+                },
+                "betterPhpErrorLogger.newLinesForEcho": {
+                    "scope": "application",
+                    "type": "string",
+                    "title": "New lines for echo",
+                    "default": "pre",
+                    "enum": [
+                        "none",
+                        "pre",
+                        "br",
+                        "PHP_EOL"
+                    ],
+                    "description": "Set this to none, pre, br or PHP_EOL"
+                },
+                "betterPhpErrorLogger.logMultiple": {
+                    "scope": "application",
+                    "type": "string",
+                    "title": "Log multiple",
+                    "default": "Normal",
+                    "enum": [
+                        "Normal",
+                        "As compact array",
+                        "Only first"
+                    ],
+                    "description": "Set this to Normal, As compact array or Only first"
                 }
             }
         }
